--- a/package.json
+++ b/package.json
@@ -3,36 +3,30 @@
   "version": "1.0.0",
   "description": "nodejs login with jwt token",
   "main": "server.js",
-
- 
-
-
   "scripts": {
     "test": "node server.js",
     "dev": "nodemon server.js",
     "start": "node server.js"
-    },
-
-
+  },
   "keywords": [
     "nodejs",
     "jwt",
     "passport",
     "express"
   ],
-  "author": "Yair Roshal",
+  "author": "Yair Roshal mern-login-server",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.0",
-    "body-parser": "^1.17.2",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "jsonwebtoken": "^7.4.2",
-    "mongodb": "^3.1.6",
-    "mongoose": "^5.2.15",
-    "nodemon": "^1.18.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.3.0",
+    "mongoose": "^6.1.5",
+    "nodemon": "^2.0.15",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {}
 }
